--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,12 @@ code {
   0%    { opacity: 0; }
   100%  { opacity: 1;}
 }
+
+@keyframes backdropAnimation {
+  0% {
+     backdrop-filter: blur(0px);
+  }
+  100% {
+     backdrop-filter: blur(30px);
+  }
+}
